# slkspec

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/dependabot/: constraints.txt
.github/workflows/: lint_job.yml  tests.yml
slkspec/: __init__.py  _version.py  core.py  xr_accessor.py
slkspec/tests/: conftest.py  test_open_dataset.py  verify_slk.py
